test/scc_test/decl/semantic-errors/017.t
typedef extern int int32;